--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "material-dashboard-react",
+  "name": "Madcamp_Week4",
   "version": "1.5.0",
-  "description": "Material Dashboard React. Coded by Creative Tim",
+  "description": "Madcamp Wee4 Project. Seungwon Ju & Suhyun Lee",
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
@@ -30,18 +30,16 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
     "lint:check": "eslint . --ext=js,jsx;  exit 0",
     "lint:fix": "eslint . --ext=js,jsx --fix;  exit 0",
-    "build-package": "babel src --out-dir dist"
+    "build-package": "babel src --out-dir dist",
+    "deploy": "react-scripts build && firebase deploy"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/creativetimofficial/material-dashboard-react.git"
+    "url": "git+https://github.com/MadCampJL/Week4"
   },
   "keywords": [],
-  "author": "Creative Tim <hello@creative-tim.com> (https://www.creative-tim.com/)",
+  "author": "Seungwon Ju & Suhyun Lee",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/creativetimofficial/material-dashboard-react/issues"
-  },
   "optionalDependencies": {
     "babel-eslint": "7.2.3",
     "eslint": "4.19.1",
