--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ajv": "^5.0.0",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
+    "firebase": "^5.8.0",
     "npm-run-all": "4.1.3",
     "perfect-scrollbar": "1.4.0",
     "react": "16.5.2",
@@ -50,8 +51,8 @@
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-import-rename": "1.0.1",
+    "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-es2015": "6.24.1"
