--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-google-maps": "9.4.5",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
+    "react-swipe": "^6.0.4",
     "react-swipeable-views": "0.12.17"
   },
   "scripts": {
