--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-google-maps": "9.4.5",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
-    "react-swipeable-views": "0.12.17"
+    "react-swipeable-views": "0.12.17",
+    "react-tree-graph": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
