--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
     "react-swipe": "^6.0.4",
-    "react-swipeable-views": "0.12.17"
+    "react-swipeable-views": "^0.13.1",
+    "react-swipeable-views-utils": "^0.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
